package br.nemo.immigrant.ontology.entity.productsprintbacklog.models;

public enum AcceptanceCriterionType {
    FUNCTIONALACCEPTANCECRITERION,
    NONFUNCTIONALACCEPTANCECRITERION
}