package br.nemo.immigrant.ontology.entity.productsprintbacklog.models;

public enum UserStoryType {
    EPIC,
    ATOMICUSERSTORY
}